// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/StyledSvg <SvgIcon /> snapshots should match the snapshot with the default props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.svg
    viewBox="0 0 0 0"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-bdVaJa dUNsyo",
      "viewBox": "0 0 0 0",
    },
    "ref": null,
    "rendered": null,
    "type": "svg",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-bdVaJa dUNsyo",
        "viewBox": "0 0 0 0",
      },
      "ref": null,
      "rendered": null,
      "type": "svg",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`/components/StyledSvg <SvgIcon /> snapshots should match the snapshot with the optional props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.svg
    color="#cc0000"
    hoverColor="#fff"
    size="100px"
    viewBox="0 0 0 0"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-bdVaJa iqZbym",
      "color": "#cc0000",
      "size": "100px",
      "viewBox": "0 0 0 0",
    },
    "ref": null,
    "rendered": null,
    "type": "svg",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-bdVaJa iqZbym",
        "color": "#cc0000",
        "size": "100px",
        "viewBox": "0 0 0 0",
      },
      "ref": null,
      "rendered": null,
      "type": "svg",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
